    - `cmd/folderflow` -> `cmd/ff``
    - `.gitignore`, `README.md` and `.github/worflows/*.yaml` have been udated accordingly
2. Add a Docusaurus documentation and write it
3. Add a pipeline (github action) to push documentation to github wiki
4. Move go.yaml CI to ci.yaml to inlclude docs pkg build verification
5. Update config file flag for `--file` to `--config`

### Removed

## [0.1.0] - 2025-12-25

### Added

- Initial project documentation:
    - This CHANGELOG file to track notable changes.
    - A README explaining the project goals and usage.
    - MIT license.

- Document classification using **dynamic, plugin-based filters and strategies**, allowing custom extensions.
    - Support for multiple source directories.

    - **Built-in filters**
        - Filter files by extension.
        - Filter files using regex patterns.

    - **Built-in classification strategies**
        - Classify files based on last modification date.
        - Classify files based on source directory hierarchy.

    - Optional parallel execution to improve performance.
    - Execution statistics for classification runs.

    - **File conflict handling strategies**
        - Skip existing files.
        - Overwrite existing files.
        - Rename files on conflict.
            - The default rename behavior checks whether the destination file is identical; if so, it is skipped.
            - When using overwrite mode, if multiple files resolve to the same destination path, only the last processed file is preserved.

    - **Dry-run mode**
        - Simulates the classification process without modifying the filesystem.
        - Displays expected execution statistics.
        - Does not resolve conflicts between files that would be moved.

    - **Regrouping file views**
        - Strategy-based regrouping.
        - Output modes:
            - Hardlink
            - Symlink
            - Copy