@@ -22,6 +22,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 3. Add a pipeline (github action) to push documentation to github wiki
 4. Move go.yaml CI to ci.yaml to inlclude docs pkg build verification
 5. Update config file flag for `--file` to `--config`
+6. Update Pr-Release CI plugins
 
 ### Removed
 
